css/style.css
html, body, #content
{
	margin:0;
	padding:0;
	width:100%;
	height:100%;
	font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
}

input[type="text"], input[class="color"], #color
{
	border:1px solid #aaaaaa;
	border-radius:5px;
}

#page_serverList, #page_client
{
	background:#EEEEFF;
	position:absolute;
	top:0px;
	left:0px;
	bottom:0px;
	right:0px;
}

#page_serverList #serverHeader
{
	position:absolute;
	top:16px;
	left:16px;
	font-size:24px;
	font-weight:bold;
}

#page_serverList #aboutButton
{
	position:absolute;
	top:16px;
	right:16px;
}

#page_serverList #servers
{
	border:1px solid #aaaaaa;
	border-radius:5px;
	position:absolute;
	top:64px;
	left:16px;
	right:16px;
	bottom:256px;
	overflow:auto;
	padding:0px;
	background:white;
}

#page_serverList #serverDescription
{
	border:1px solid #aaaaaa;
	border-radius:5px;
	position:absolute;
	left:16px;
	right:16px;
	bottom:56px;
	height:172px;
	overflow:auto;
	padding:8px;
	background:white;
}

#page_serverList #servers .serverItem
{
	padding:8px;
	background-color:white;
	color:black;
	font-size:18px;
}

#page_serverList #servers .serverItem:hover
{
	background-color:#3333FF;
	color:white;
	cursor:pointer;
}	

#page_serverList #name
{
	position:absolute;
	bottom:16px;
	left:16px;
	height:32px;
	font-size:16px;
	padding-left:8px;
	padding-right:8px;
	width:160px;
	box-sizing: border-box;
}

#page_serverList #color
{
	position:absolute;
	bottom:16px;
	left:184px;
	height:32px;
	font-size:16px;
	padding-left:8px;
	padding-right:8px;
	width:96px;
	box-sizing: border-box;
}

#page_serverList #advancedConnection
{
	height:32px;
	font-size:16px;
	padding-left:8px;
	padding-right:8px;
	position:absolute;
	bottom:16px;
	left:288px;
	box-sizing: border-box;
    width: -webkit-calc(100% - 340px);
    width: calc(100% - 444px);
}

#page_serverList #connectButton
{
	height:31px;
	position:absolute;
	bottom:16px;
	right:16px;
	width:128px;
	font-size:16px;
	font-weight:bold;
}

#page_client .channelChat
{
	position:absolute;
	top:16px;
	left:16px;
	right:320px;
	bottom:60px;
	border:1px solid #aaaaaa;
	border-radius:5px;
	border-top-right-radius:0px;
	border-bottom-right-radius:0px;
	padding:8px;
	overflow-y:auto;
	background:white;
	font-size:14px;
}

a
{
	color:blue;
	text-decoration:underline;
}

#page_client .channelPlayers
{
	position:absolute;
	top:16px;
	right:16px;
	width:287px;
	bottom:16px;
	border:1px solid #aaaaaa;
	border-radius:8px;
	border-top-left-radius:0px;
	padding:8px;
	overflow-y:auto;
	background:white;
}

#page_client .channelInput
{
	position: absolute;
	bottom: 16px;
	height: 32px;
	font-size: 16px;
	left: 16px;
	box-sizing: border-box;
	width: -webkit-calc(100% - 340px);
	width: calc(100% - 460px);
	padding-left:8px;
	padding-right:8px;
}

#page_client .channelSendButton
{
	position: absolute;
	bottom: 16px;
	right: 332px;
	width: 96px;
	height: 31px;
	font-size:16px;
	font-weight:bold;
}

#page_client .channelContainer
{
	position:absolute;
	top:48px;
	left:0px;
	right:0px;
	bottom:0px;
}

#page_client #channelsContainer
{
	position:absolute;
	top:0px;
	left:0px;
	right:256px;
	bottom:0px;
	border-radius:0px;
}

#page_client #channelList
{
	position:absolute;
	top:0px;
	right:0px;
	width:256px;
	bottom:0px;
	box-sizing:border-box;
	background:white;
	overflow:auto;
	padding:8px;
	font-size:16px;
}

#page_client #channelList .channelItem span
{
	text-decoration:none;
	color:black;
	font-weight:bold;
	cursor:pointer;
}

